# skillpad

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  RELEASE.md  STYLE_GUIDE.md  biome.json  bunfig.toml  eslint.config.js  eslint.config.mjs  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-badge.yml  release.yml
api/: package.json  tsconfig.json  vercel.json
api/api/: proxy.ts  search.ts
badge/: CNAME
badge/api/: badge.ts
docs/: next.config.ts  package.json  source.config.ts
docs/src/: mdx-components.tsx  middleware.ts
e2e/: add-skill.spec.ts  concurrent-list.spec.ts  navigation.spec.ts  non-github-skill.spec.ts  skill-detail.spec.ts  skill-lifecycle.spec.ts  vite-plugin-shell.ts
e2e/shims/: api-core.ts  api-path.ts  api-window.ts  plugin-dialog.ts  plugin-http.ts  plugin-shell.ts  plugin-store.ts  plugin-window-state.ts
src/: App.tsx  app.tsx  index.css  main.tsx  test-globals.ts  test-mocks.ts  test-setup.ts  testing-library-react-wrapper.ts  testing-library-screen.ts  testing.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/dev/: icon.icns
src-tauri/src/: lib.rs  main.rs  runtime.rs
src/__tests__/: example.test.ts
src/components/: AddSkillDialog.tsx  ErrorBoundary.tsx  InlineError.tsx  Layout.tsx  MainContent.tsx  PreferencesDialog.tsx  SearchInput.tsx  Sidebar.tsx  SkillCard.tsx  add-skill-dialog.test.tsx  add-skill-dialog.tsx  agent-icon.tsx  (+29 more)
(+166 files in other folders)
